--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,24 +1,31 @@
 .App {
   text-align: center;
+  font-family: 'Markazi Text', serif;
 }
 
 nav {
   text-align: center;
-  margin-bottom: 1em;
-  padding-bottom: 0.2em;
-  padding-top: 2em;
-  background-color: #efefef;
+  margin-bottom: 0em;
+  padding-bottom: 0em;
+  padding-top: 1em;
+  background-color: #34495e;
 }
 
 nav ul {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  font-family: 'Markazi Text', serif;
 }
 
 p,
 li {
-  font-size: 2rem;
+  font-size: 3rem;
+}
+
+a {
+  color: #ecf0f1;
+  text-decoration: None;
 }
 
 ul {
@@ -34,6 +41,7 @@ textarea {
 
 .active {
   font-weight: bold;
+  color: #f1c40f;
 }
 
 .form {
